// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-graph-editor/Graph with lines 1`] = `
.emotion-10 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding: 4px;
}

.emotion-9 {
  position: relative;
  width: 100%;
  height: 100%;
}

.emotion-0 {
  width: 8px;
  height: 8px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 0%;
  bottom: 0%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-1 {
  width: 8px;
  height: 8px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 22.916666666666664%;
  bottom: 0.34843205574912894%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-2 {
  width: 8px;
  height: 8px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 100%;
  bottom: 1.0452961672473868%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-3 {
  width: 8px;
  height: 8px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 0%;
  bottom: 26.82926829268293%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-4 {
  width: 8px;
  height: 8px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 22.916666666666664%;
  bottom: 40.76655052264808%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-5 {
  width: 8px;
  height: 8px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 100%;
  bottom: 100%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-6 {
  width: 8px;
  height: 8px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 0%;
  bottom: 26.82926829268293%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-7 {
  width: 8px;
  height: 8px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 22.916666666666664%;
  bottom: 34.23344947735192%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-8 {
  width: 8px;
  height: 8px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 100%;
  bottom: 55.79268292682927%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

<div
  style="width:100%;height:100vh;background-color:rgba(0,0,0,0.25)"
>
  <div
    class="emotion-10"
  >
    <div
      class="emotion-9"
    >
      <button
        aria-label="Point (320, 12)"
        class="emotion-0"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(320, 12)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (540, 16)"
        class="emotion-1"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(540, 16)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (1280, 24)"
        class="emotion-2"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(1280, 24)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (320, 320)"
        class="emotion-3"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(320, 320)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (540, 480)"
        class="emotion-4"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(540, 480)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (1280, 1160)"
        class="emotion-5"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(1280, 1160)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (320, 320)"
        class="emotion-6"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(320, 320)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (540, 405)"
        class="emotion-7"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(540, 405)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (1280, 652.5)"
        class="emotion-8"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(1280, 652.5)"
        type="button"
        width="960"
      />
    </div>
  </div>
</div>
`;

exports[`react-graph-editor/Graph with lines and theme 1`] = `
.emotion-9 {
  position: relative;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding: 8px;
}

.emotion-0 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 0%;
  bottom: 0%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-1 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 22.916666666666664%;
  bottom: 0.34843205574912894%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-2 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 100%;
  bottom: 1.0452961672473868%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-3 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 0%;
  bottom: 26.82926829268293%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-4 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 22.916666666666664%;
  bottom: 40.76655052264808%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-5 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 100%;
  bottom: 100%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-6 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 0%;
  bottom: 26.82926829268293%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-7 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 22.916666666666664%;
  bottom: 34.23344947735192%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-8 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 100%;
  bottom: 55.79268292682927%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

<div
  style="box-sizing:border-box;width:100%;height:100vh;background-color:rgba(0,0,0,0.25)"
>
  <div
    class="emotion-10"
  >
    <div
      class="emotion-9"
    >
      <button
        aria-label="Point (320, 12)"
        class="emotion-0"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(320, 12)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (540, 16)"
        class="emotion-1"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(540, 16)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (1280, 24)"
        class="emotion-2"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(1280, 24)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (320, 320)"
        class="emotion-3"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(320, 320)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (540, 480)"
        class="emotion-4"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(540, 480)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (1280, 1160)"
        class="emotion-5"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(1280, 1160)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (320, 320)"
        class="emotion-6"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(320, 320)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (540, 405)"
        class="emotion-7"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(540, 405)"
        type="button"
        width="960"
      />
      <button
        aria-label="Point (1280, 652.5)"
        class="emotion-8"
        height="1148"
        maxx="1280"
        maxy="1160"
        minx="320"
        miny="12"
        originx="left"
        originy="bottom"
        title="(1280, 652.5)"
        type="button"
        width="960"
      />
    </div>
  </div>
</div>
`;

exports[`react-graph-editor/Graph with lines and theme and custom bounds 1`] = `
.emotion-9 {
  position: relative;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding: 8px;
}

.emotion-0 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 50.67178502879079%;
  bottom: 38.84836852207293%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-1 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 59.11708253358925%;
  bottom: 39.00191938579655%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-2 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 87.5239923224568%;
  bottom: 39.309021113243766%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-3 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 50.67178502879079%;
  bottom: 50.67178502879079%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-4 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 59.11708253358925%;
  bottom: 56.813819577735124%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-5 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 87.5239923224568%;
  bottom: 82.91746641074856%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-6 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 50.67178502879079%;
  bottom: 50.67178502879079%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-7 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 59.11708253358925%;
  bottom: 53.93474088291747%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-8 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 87.5239923224568%;
  bottom: 63.43570057581574%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

<div
  style="box-sizing:border-box;width:100%;height:100vh;background-color:rgba(0,0,0,0.25)"
>
  <div
    class="emotion-10"
  >
    <div
      class="emotion-9"
    >
      <button
        aria-label="Point (320, 12)"
        class="emotion-0"
        height="2605"
        maxx="1605"
        maxy="1605"
        minx="-1000"
        miny="-1000"
        originx="left"
        originy="bottom"
        title="(320, 12)"
        type="button"
        width="2605"
      />
      <button
        aria-label="Point (540, 16)"
        class="emotion-1"
        height="2605"
        maxx="1605"
        maxy="1605"
        minx="-1000"
        miny="-1000"
        originx="left"
        originy="bottom"
        title="(540, 16)"
        type="button"
        width="2605"
      />
      <button
        aria-label="Point (1280, 24)"
        class="emotion-2"
        height="2605"
        maxx="1605"
        maxy="1605"
        minx="-1000"
        miny="-1000"
        originx="left"
        originy="bottom"
        title="(1280, 24)"
        type="button"
        width="2605"
      />
      <button
        aria-label="Point (320, 320)"
        class="emotion-3"
        height="2605"
        maxx="1605"
        maxy="1605"
        minx="-1000"
        miny="-1000"
        originx="left"
        originy="bottom"
        title="(320, 320)"
        type="button"
        width="2605"
      />
      <button
        aria-label="Point (540, 480)"
        class="emotion-4"
        height="2605"
        maxx="1605"
        maxy="1605"
        minx="-1000"
        miny="-1000"
        originx="left"
        originy="bottom"
        title="(540, 480)"
        type="button"
        width="2605"
      />
      <button
        aria-label="Point (1280, 1160)"
        class="emotion-5"
        height="2605"
        maxx="1605"
        maxy="1605"
        minx="-1000"
        miny="-1000"
        originx="left"
        originy="bottom"
        title="(1280, 1160)"
        type="button"
        width="2605"
      />
      <button
        aria-label="Point (320, 320)"
        class="emotion-6"
        height="2605"
        maxx="1605"
        maxy="1605"
        minx="-1000"
        miny="-1000"
        originx="left"
        originy="bottom"
        title="(320, 320)"
        type="button"
        width="2605"
      />
      <button
        aria-label="Point (540, 405)"
        class="emotion-7"
        height="2605"
        maxx="1605"
        maxy="1605"
        minx="-1000"
        miny="-1000"
        originx="left"
        originy="bottom"
        title="(540, 405)"
        type="button"
        width="2605"
      />
      <button
        aria-label="Point (1280, 652.5)"
        class="emotion-8"
        height="2605"
        maxx="1605"
        maxy="1605"
        minx="-1000"
        miny="-1000"
        originx="left"
        originy="bottom"
        title="(1280, 652.5)"
        type="button"
        width="2605"
      />
    </div>
  </div>
</div>
`;

exports[`react-graph-editor/Graph with lines and theme and zero point 1`] = `
.emotion-9 {
  position: relative;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding: 8px;
}

.emotion-5 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 100%;
  bottom: 100%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-0 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 25%;
  bottom: 1.0344827586206897%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-1 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 42.1875%;
  bottom: 1.3793103448275863%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-2 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #e41a1c;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  border-radius: 50%;
  position: absolute;
  left: 100%;
  bottom: 2.0689655172413794%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-3 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 25%;
  bottom: 27.586206896551722%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-4 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #377eb8;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 42.1875%;
  bottom: 41.37931034482759%;
  -webkit-transform: translate(-50%,50%) rotate(45deg);
  -ms-transform: translate(-50%,50%) rotate(45deg);
  transform: translate(-50%,50%) rotate(45deg);
  outline: 0;
  text-indent: 100%;
}

.emotion-6 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 25%;
  bottom: 27.586206896551722%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-7 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 42.1875%;
  bottom: 34.91379310344828%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

.emotion-8 {
  width: 16px;
  height: 16px;
  box-sizing: border-box;
  padding: 0;
  border: 1px solid transparent;
  background: #4daf4a;
  box-shadow: 0 0 1px 1px rgba(0,0,0,0.15);
  cursor: move;
  font-size: 0;
  line-height: 0;
  position: absolute;
  left: 100%;
  bottom: 56.25%;
  -webkit-transform: translate(-50%,50%);
  -ms-transform: translate(-50%,50%);
  transform: translate(-50%,50%);
  outline: 0;
  text-indent: 100%;
}

<div
  style="box-sizing:border-box;width:100%;height:100vh;background-color:rgba(0,0,0,0.25)"
>
  <div
    class="emotion-10"
  >
    <div
      class="emotion-9"
    >
      <button
        aria-label="Point (320, 12)"
        class="emotion-0"
        height="1160"
        maxx="1280"
        maxy="1160"
        minx="0"
        miny="0"
        originx="left"
        originy="bottom"
        title="(320, 12)"
        type="button"
        width="1280"
      />
      <button
        aria-label="Point (540, 16)"
        class="emotion-1"
        height="1160"
        maxx="1280"
        maxy="1160"
        minx="0"
        miny="0"
        originx="left"
        originy="bottom"
        title="(540, 16)"
        type="button"
        width="1280"
      />
      <button
        aria-label="Point (1280, 24)"
        class="emotion-2"
        height="1160"
        maxx="1280"
        maxy="1160"
        minx="0"
        miny="0"
        originx="left"
        originy="bottom"
        title="(1280, 24)"
        type="button"
        width="1280"
      />
      <button
        aria-label="Point (320, 320)"
        class="emotion-3"
        height="1160"
        maxx="1280"
        maxy="1160"
        minx="0"
        miny="0"
        originx="left"
        originy="bottom"
        title="(320, 320)"
        type="button"
        width="1280"
      />
      <button
        aria-label="Point (540, 480)"
        class="emotion-4"
        height="1160"
        maxx="1280"
        maxy="1160"
        minx="0"
        miny="0"
        originx="left"
        originy="bottom"
        title="(540, 480)"
        type="button"
        width="1280"
      />
      <button
        aria-label="Point (1280, 1160)"
        class="emotion-5"
        height="1160"
        maxx="1280"
        maxy="1160"
        minx="0"
        miny="0"
        originx="left"
        originy="bottom"
        title="(1280, 1160)"
        type="button"
        width="1280"
      />
      <button
        aria-label="Point (320, 320)"
        class="emotion-6"
        height="1160"
        maxx="1280"
        maxy="1160"
        minx="0"
        miny="0"
        originx="left"
        originy="bottom"
        title="(320, 320)"
        type="button"
        width="1280"
      />
      <button
        aria-label="Point (540, 405)"
        class="emotion-7"
        height="1160"
        maxx="1280"
        maxy="1160"
        minx="0"
        miny="0"
        originx="left"
        originy="bottom"
        title="(540, 405)"
        type="button"
        width="1280"
      />
      <button
        aria-label="Point (1280, 652.5)"
        class="emotion-8"
        height="1160"
        maxx="1280"
        maxy="1160"
        minx="0"
        miny="0"
        originx="left"
        originy="bottom"
        title="(1280, 652.5)"
        type="button"
        width="1280"
      />
    </div>
  </div>
</div>
`;
